[gd_scene load_steps=4 format=3 uid="uid://f1dms0ef1ctt"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_x66mr"]
[ext_resource type="Theme" uid="uid://c8nj6sowc210b" path="res://theme/game_theme.tres" id="2_a80mq"]

[sub_resource type="Environment" id="Environment_5pkdd"]
background_mode = 3
glow_enabled = true
glow_intensity = 1.05
glow_strength = 1.14
glow_blend_mode = 1
glow_hdr_threshold = 0.0
glow_hdr_scale = 1.66
glow_map_strength = 1.0

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_x66mr")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -137.0
offset_top = -20.0
offset_right = 137.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 38
alignment = 1

[node name="OPTIONS" type="Button" parent="MarginContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_a80mq")
text = "OPTIONS
"

[node name="PLAY" type="Button" parent="MarginContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_a80mq")
text = "PLAY
"

[node name="CREDITS" type="Button" parent="MarginContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_a80mq")
text = "CREDITS"

[node name="Brillo efecto ne√≥n" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_5pkdd")

[connection signal="pressed" from="MarginContainer/CenterContainer/HBoxContainer/OPTIONS" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/HBoxContainer/PLAY" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/HBoxContainer/CREDITS" to="." method="_on_credits_pressed"]
